force-app/main/default/objects/Monthly_Revenue_Process_Control__c/Monthly_Revenue_Process_Control__c.object-meta.xml
<CustomObject>
    <description>Kick off and track each step of the Monthly Revenue Process in JDE</description>
    <label>Monthly Revenue Process Control</label>
    <nameField>
        <label>Monthly Revenue Process Control Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Revenue Process Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>