force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Currency_Conversion_Being_Processed__c.field-meta.xml
<CustomField>
    <fullName>Currency_Conversion_Being_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the currency conversion has been initiated</description>
    <inlineHelpText>Indicates if the currency conversion has been initiated</inlineHelpText>
    <label>Currency Conversion Being Processed</label>
    <type>Checkbox</type>
</CustomField>