force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Currency_Conversion_Completed__c.field-meta.xml
<CustomField>
    <fullName>Currency_Conversion_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the Currency Conversion month-end process request has been completed</description>
    <inlineHelpText>Flag to indicate if the Currency Conversion month-end process request has been completed</inlineHelpText>
    <label>Currency Conversion Completed</label>
    <type>Checkbox</type>
</CustomField>