force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Currency_Conversion_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Currency_Conversion_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the Currency Conversion month-end process request has been scheduled</description>
    <inlineHelpText>Flag to indicate if the Currency Conversion month-end process request has been scheduled</inlineHelpText>
    <label>Currency Conversion Submitted</label>
    <type>Checkbox</type>
</CustomField>