force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Current_Month_and_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_and_Year__c</fullName>
    <description>This field is set by workflow and determines unique records</description>
    <label>Current Month and Year</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>