force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Cycle_Start_Date_del__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Start_Date_del__c</fullName>
    <label>Cycle Start Date</label>
    <type>Date</type>
</CustomField>