force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Early_Look_Final_Report_Being_Processed__c.field-meta.xml
<CustomField>
    <fullName>Early_Look_Final_Report_Being_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the early look report email has been initiated</description>
    <inlineHelpText>Indicates if the early look report email has been initiated</inlineHelpText>
    <label>Early Look Final Report Being Processed</label>
    <type>Checkbox</type>
</CustomField>