force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Early_Look_Final_Report_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Early_Look_Final_Report_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the early look final report request has been scheduled</description>
    <inlineHelpText>Flag to indicate if the early look final report request has been scheduled</inlineHelpText>
    <label>Early Look Final Report Submitted</label>
    <type>Checkbox</type>
</CustomField>