force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Early_Look_Preliminary_Report_Sent__c.field-meta.xml
<CustomField>
    <fullName>Early_Look_Preliminary_Report_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Look Preliminary Report Sent</label>
    <type>Checkbox</type>
</CustomField>