force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/ERP_Last_Integration_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Error_Description__c</fullName>
    <label>ERP Last Integration Error Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>