force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Export_Revenue_Completed__c.field-meta.xml
<CustomField>
    <fullName>Export_Revenue_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that the Revenue Events for Oracle have been completed</description>
    <inlineHelpText>Flag to indicate that the Revenue Events for Oracle have been completed</inlineHelpText>
    <label>Export Revenue Completed</label>
    <type>Checkbox</type>
</CustomField>