force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Export_Revenue_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Export_Revenue_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that the Revenue Events for Oracle have been scheduled</description>
    <inlineHelpText>Flag to indicate that the Revenue Events for Oracle have been scheduled</inlineHelpText>
    <label>Export Revenue Submitted</label>
    <type>Checkbox</type>
</CustomField>