force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Final_Changes_Due__c.field-meta.xml
<CustomField>
    <fullName>Final_Changes_Due__c</fullName>
    <description>Last day the accruals are updated</description>
    <inlineHelpText>Last day the accruals are updated</inlineHelpText>
    <label>Final Changes Due</label>
    <type>Date</type>
</CustomField>