force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Final_Report_Being_Processed__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_Being_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the final report email has been initiated</description>
    <inlineHelpText>Indicates if the final report email has been initiated</inlineHelpText>
    <label>Final Report Being Processed</label>
    <type>Checkbox</type>
</CustomField>