force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Final_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_Date__c</fullName>
    <description>Expected date to send the final report</description>
    <inlineHelpText>Expected date to send the final report</inlineHelpText>
    <label>Final Report Date</label>
    <type>Date</type>
</CustomField>