force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Final_Report_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the final report has been distributed</description>
    <inlineHelpText>Flag to indicate if the final report has been distributed</inlineHelpText>
    <label>Final Report Sent</label>
    <type>Checkbox</type>
</CustomField>