force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Final_Report_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the final report request has been scheduled</description>
    <inlineHelpText>Flag to indicate if the final report request has been scheduled</inlineHelpText>
    <label>Final Report Submitted</label>
    <type>Checkbox</type>
</CustomField>