force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Final_Reversal_Completed__c.field-meta.xml
<CustomField>
    <fullName>Final_Reversal_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the final reversal notification has been completed</description>
    <inlineHelpText>Flag to indicate if the final reversal notification has been completed</inlineHelpText>
    <label>Final Reversal Completed</label>
    <type>Checkbox</type>
</CustomField>