force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Generate_Revenue_Completed__c.field-meta.xml
<CustomField>
    <fullName>Generate_Revenue_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that the Generate Revenue for Oracle has been completed</description>
    <inlineHelpText>Flag to indicate that the Generate Revenue for Oracle has been completed</inlineHelpText>
    <label>Generate Revenue Completed</label>
    <type>Checkbox</type>
</CustomField>