force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Generate_Revenue_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Generate_Revenue_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that the Generate Revenue for Oracle has been scheduled</description>
    <inlineHelpText>Flag to indicate that the Generate Revenue for Oracle has been scheduled</inlineHelpText>
    <label>Generate Revenue Submitted</label>
    <type>Checkbox</type>
</CustomField>