force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Initial_Reversal_Being_Processed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reversal_Being_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the initial reversal process has been initiated</description>
    <inlineHelpText>Indicates if the initial reversal process has been initiated</inlineHelpText>
    <label>Initial Reversal Being Processed</label>
    <type>Checkbox</type>
</CustomField>