force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Initial_Reversal_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reversal_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the initial reversal notification has been scheduled</description>
    <inlineHelpText>Flag to indicate if the initial reversal notification has been scheduled</inlineHelpText>
    <label>Initial Reversal Submitted</label>
    <type>Checkbox</type>
</CustomField>