force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/IsCurrent__c.field-meta.xml
<CustomField>
    <fullName>IsCurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this is the current Monthly Revenue Process Control record (only one record can be active at a time)</description>
    <inlineHelpText>Indicates that this is the current Monthly Revenue Process Control record (only one record can be active at a time)</inlineHelpText>
    <label>Is Current</label>
    <type>Checkbox</type>
</CustomField>