force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Preliminary_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Report_Date__c</fullName>
    <label>Preliminary Report Date</label>
    <type>Date</type>
</CustomField>