force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Preliminary_Report_Sent__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Report_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preliminary Report Sent</label>
    <type>Checkbox</type>
</CustomField>