force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Processing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Processing_Start_Date__c</fullName>
    <label>Processing Start Date</label>
    <type>Date</type>
</CustomField>