force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Revenue_Accruals_Locked__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Accruals_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the entry of Revenue Accrual records has been locked to all except Administrators</description>
    <inlineHelpText>Indicates that the entry of Revenue Accrual records has been locked to all except Administrators</inlineHelpText>
    <label>Revenue Accruals Locked</label>
    <type>Checkbox</type>
</CustomField>