force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Revenue_Being_Processed__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Being_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates the revenue process has started. Upon completion, this will be unchecked.</description>
    <label>Revenue Being Processed</label>
    <type>Checkbox</type>
</CustomField>