force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Date__c</fullName>
    <description>Revenue report date</description>
    <inlineHelpText>Revenue report date</inlineHelpText>
    <label>Revenue Date</label>
    <type>Date</type>
</CustomField>