force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Staff_Summary_Report_Being_Processed__c.field-meta.xml
<CustomField>
    <fullName>Staff_Summary_Report_Being_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the staffing summary report email has been initiated</description>
    <inlineHelpText>Indicates if the staffing summary report email has been initiated</inlineHelpText>
    <label>Staff Summary Report Being Processed</label>
    <type>Checkbox</type>
</CustomField>