force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Staff_Summary_Report_Sent__c.field-meta.xml
<CustomField>
    <fullName>Staff_Summary_Report_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the final report request has been distributed</description>
    <inlineHelpText>Flag to indicate if the final report request has been distributed</inlineHelpText>
    <label>Staff Summary Report Sent</label>
    <type>Checkbox</type>
</CustomField>