force-app/main/default/objects/Monthly_Revenue_Process_Control__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the Currently Running Process</description>
    <inlineHelpText>Status of the Currently Running Process</inlineHelpText>
    <label>Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>