force-app/main/default/objects/Monthly_Revenue_Process_Control__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Current_Month_and_Year__c</columns>
    <columns>Revenue_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>